# quickcheck-arbitrary-template

./: .gitignore  ChangeLog.md  LICENSE  README.md  circle.yml  package.yaml  quickcheck-arbitrary-template.cabal  stack.yaml
src/: Main.hs
src/Test/QuickCheck/TH/: Generators.hs
src/Test/QuickCheck/TH/Generators/: Internal.hs
src/Test/QuickCheck/TH/Generators/Internal/: BuildArbitrary.hs
test/: Spec.hs
test/Test/QuickCheck/TH/: GeneratorsSpec.hs
