Name:                   quickcheck-arbitrary-template
Version:                0.0.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Test.QuickCheck.TH.Generators
                        Test.QuickCheck.TH.Generators.Internal
--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
-- Test Suite Code
                      , lens
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck

executable quickcheck-arbitrary-template
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  main-is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , quickcheck-arbitrary-template
-- Test Suite Code
                      , lens
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck
                      

Source-Repository head
  Type:                 git
--  Location:             
