Name:                   quickcheck-arbitrary-template
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Generate QuickCheck Gen for Sum Types
Description:            Building Sum Type arbitrary instance is kind of a pain
                        This tool helps automate the process
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Test.QuickCheck.TH.Generators
                        Test.QuickCheck.TH.Generators.Internal
                        Test.QuickCheck.TH.Generators.Internal.BuildArbitrary




  Build-Depends:        base >= 4 && < 5
                      , QuickCheck
                      , safe
                      , template-haskell


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , QuickCheck
                      , safe
                      , template-haskell >= 2.11 && < 2.13
                      , tasty
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/quickcheck-arbitrary-template
